# notes-prototype

./: .gitignore  AGENTS.md  AQUA-TESTING.md  README.md  SPEC.md  TLON-INTEGRATION-SPEC.md  desk.bill  peru.yaml
.github/workflows/: desktop-app.yml
app/: notes.hoon
app/src/: index.html  main.js  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  main.rs
app/src-tauri/src/fs/: mod.rs  watcher.rs  writer.rs
app/src-tauri/src/sync/: conflict.rs  engine.rs  local_to_ship.rs  mod.rs  path_mapper.rs  ship_to_local.rs  state.rs
app/src-tauri/src/urbit/: channel.rs  client.rs  mod.rs  types.rs
desk/: desk.docket-0
desk/app/: notes.hoon
desk/app/notes-ui/: index.html
desk/lib/: notes-json.hoon  notes-ui.hoon  test-agent.hoon
desk/mar/notes/: command.hoon  response.hoon  update.hoon
desk/sur/: notes.hoon
desk/tests/app/: notes.hoon
mar/: html.hoon
scripts/: sync-deps.sh
tests/e2e/: wipe-leftovers.ts
tests/e2e/fixtures/: notes.ts
tests/e2e/specs/: auto-save.spec.ts  cross-ship-decline-invite.spec.ts  cross-ship-edit.spec.ts  cross-ship-leave-notebook.spec.ts  folder-delete-with-children.spec.ts  folder-navigation.spec.ts  publish-note.spec.ts
